Fix sponsor spacing in intermediate screen sizes

--- a/css/Components/Sponsors.scss
+++ b/css/Components/Sponsors.scss
@@ -68,11 +68,11 @@
 }
 
 .Sponsors-levelLogo:not(:last-child) {
-  margin-bottom: $Spacing-xSmall;
+  margin-right: $Spacing-small;
+  margin-bottom: $Spacing-small;
 
-  @include Breakpoint-desktopOnly {
-    margin-right: $Spacing-small;
-    margin-bottom: $Spacing-small;
+  @include Breakpoint-mobileOnly {
+    margin-bottom: $Spacing-xSmall;
   }
 }
 
